--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,20 @@ on:
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest
-    services:
-      thor-solo:
-        image: ghcr.io/vechain/thor:latest
-        ports:
-          - 8669:8669
-        volumes:
-            - ./data:/data/thor
-            - ./logs:/var/log/thor
-        options: >-
-          --health-cmd="wget -q -O- http://127.0.0.1:8669/blocks/1"
-          --health-interval=5s
-          --health-timeout=20s
-          --health-retries=10
-          solo --on-demand --api-addr=0.0.0.0:8669 --api-cors=* --txpool-limit-per-account=256 --cache=2048 --api-allowed-tracers=all --verbosity=9 --persist --api-enable-deprecated --api-call-gas-limit=150000000 --gas-limit=150000000 --api-timeout=240000 --hayabusa
+    # services:
+    #   thor-solo:
+    #     image: ghcr.io/vechain/thor:latest
+    #     ports:
+    #       - 8669:8669
+    #     volumes:
+    #         - ./data:/data/thor
+    #         - ./logs:/var/log/thor
+    #     options: >-
+    #       --health-cmd="wget -q -O- http://127.0.0.1:8669/blocks/1"
+    #       --health-interval=5s
+    #       --health-timeout=20s
+    #       --health-retries=10
+    #       solo --on-demand --api-addr=0.0.0.0:8669 --api-cors=* --txpool-limit-per-account=256 --cache=2048 --api-allowed-tracers=all --verbosity=9 --persist --api-enable-deprecated --api-call-gas-limit=150000000 --gas-limit=150000000 --api-timeout=240000 --hayabusa
         # command:
         #   - solo
         #   - --on-demand # create new block when there is pending transaction
@@ -48,6 +48,15 @@ jobs:
         #   timeout: 20s
         #   retries: 10
     steps:
-      - name: Check that thor-solo is running
+      - name: Run Thor Solo Node
         run: |
-          wget -q -O- http://thor-solo:8669/blocks/1
+          docker run -d \
+            --name thor-solo \
+            -p 8669:8669 \
+            -v ${{ github.workspace }}/data:/data/thor \
+            -v ${{ github.workspace }}/logs:/var/log/thor \
+            ghcr.io/vechain/thor:latest \
+            solo --on-demand --api-addr=0.0.0.0:8669 --api-cors=* --txpool-limit-per-account=256 --cache=2048 --api-allowed-tracers=all --verbosity=9 --persist --api-enable-deprecated --api-call-gas-limit=150000000 --gas-limit=150000000 --api-timeout=240000 --hayabusa
+      - name: Check that it is running
+        run: |
+          docker ps | grep thor-solo
